  ledger_invariant.cpp
  ledger_invariant.hpp
  ledger_text_formats.cpp
  ledger_xml_io.cpp
Add required dumpin and various other data to group roster.

20160504T1448Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Refactor to ease maintenance.

20160504T1459Z <gchicares@sbcglobal.net> [451]

  account_value.hpp
  group_quote_pdf_gen_wx.cpp
  ihs_acctval.cpp
  ledger_invariant.cpp
  ledger_invariant.hpp
  ledger_xml_io.cpp
Change group-quote columns.

20160504T2004Z <gchicares@sbcglobal.net> [451]

  ledger_invariant.cpp
  ledger_invariant.hpp
Post recently-added product data to ledger.

20160505T1119Z <gchicares@sbcglobal.net> [451]

  illustrator.cpp
Enforce rider consistency.

20160505T1120Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Refactor to increase flexibility.

20160505T1439Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Deduce plan type.

20160507T1148Z <gchicares@sbcglobal.net> [451]

  ihs_acctval.cpp
Modalize required dumpin.

20160507T1354Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
  ihs_acctval.cpp
  ledger_invariant.cpp
  ledger_invariant.hpp
  ledger_text_formats.cpp
  ledger_xml_io.cpp
Rename required dumpin, which is now modal.

20160508T1503Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Move plan-type member to a more appropriate class.

20160508T1517Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Refactor for clarity.

20160508T1530Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Refactor for efficiency (VZ).

20160508T2139Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Refactor for concision.

20160508T2207Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Refactor.

20160509T1708Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Show elected riders.

20160509T1844Z <gchicares@sbcglobal.net> [451]

  group_quote_pdf_gen_wx.cpp
Improve consistency testing for an odd legacy product.
